--- a/app/src/main/res/layout/card_view_design.xml
+++ b/app/src/main/res/layout/card_view_design.xml
@@ -8,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="5dp">
+        android:padding="5dp"
+        android:background="@color/black">
 
 
         <TextView
@@ -18,6 +19,8 @@
             android:layout_marginStart="10dp"
             android:layout_marginLeft="15dp"
             android:text="@string/item"
+            android:textColor="@color/white"
+
             android:textSize="20sp"
             android:textStyle="bold" />
 
